# GameBench

./: CMakeLists.txt  FOLLOWUP_PROMPT.txt  IMPLEMENTATION_PROMPT.txt  README.md
inc/: Actor.hxx  Animation.hxx  Assets.hxx  Audio.hxx  CoatMenu.h  CurseVector.hxx  Effect.hxx  Enemy.hxx  Game.h  HUD.h  InputHandler.hxx  MainMenu.h  Menu.hxx  Object.hxx  Pickup.hxx  Player.hxx  Reagent.hxx  Scenery.hxx  SelfTest.hxx  Sprite.hxx
planning/salem_hexshooter/: overview.txt
planning/salem_hexshooter/02_satchel_of_thorns/: game_design.txt  ui_prompts.txt
src/: Actor.cpp  Animation.cpp  Assets.cpp  Audio.cpp  CoatMenu.cpp  CoatMenu.cxx  Core.cpp  CurseVector.cpp  CurseVector.cxx  Diagnostics.cpp  Effect.cpp  Effect.cxx  Enemy.cpp  Enemy.cxx  Game.cpp  Game.cxx  HUD.cpp  HUD.cxx  InputHandler.cpp  InputHandler.cxx  MainMenu.cpp  Menu.cpp  Object.cpp  Pickup.cpp  Pickup.cxx  Player.cpp  Player.cxx  Reagent.cpp  Reagent.cxx  Scenery.cpp  Scenery.cxx  SelfTest.cpp  Spell.cpp  Sprite.cpp  Sprite.cxx  UI.cpp  WorldObjects.cpp  main.cpp
tests/: CombatTests.cpp
